# LHC_Billiards

./: .gitignore  CMakeLists.txt
include/: ball.hpp  environment.hpp  graphics.hpp
src/: CMakeLists.txt  graphics.cpp  main.cpp
tests/: CMakeLists.txt  test_graphics.cpp
